--- a/gsg_workspace/composer.json
+++ b/gsg_workspace/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "torann/geoip": "^1.0",
         "unisharp/laravel-ckeditor": "^4.7"
     },
     "require-dev": {
